added hovers on buttons and links

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <input type="checkbox" class="h-5 w-5 rounded"/>
                     <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Assignment 1</label>
                 </div>
-                <button class="border border-[#7D8C9A] bg-[#7D8C9A] rounded-2xl  pt-2 pb-2 w-80 text-white font-thin">+ Add to-do</button>
+                <button class=" bg-[#7D8C9A] rounded-2xl  pt-2 pb-2 w-80 text-white font-thin hover:bg-[#6A7885] transition-colors duration-200">+ Add to-do</button>
             </form>
         </div>
         <!-- Overdue tasks -->
@@ -50,11 +50,11 @@
                 <img src="img/check-box.svg" alt="Tasks" class="w-10 h-8 filter bg-[#D6DDE3] rounded-full p-2 mb-1"/> 
                 <p class="text-xs font-thin text-center w-full">To-Do</p>               
             </div>
-            <div class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg cursor-pointer">
+            <div class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg cursor-pointer transition-colors duration-200">
                 <img src="img/today.svg" alt="Calender" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
                 <p class="text-xs font-thin text-center w-full">Calender</p>                  
             </div>
-            <a href="journal.html" class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg">
+            <a href="journal.html" class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg transition-colors duration-200">
                 <img src="img/edit.svg" alt="Journal" class="w-10 h-8 filter rounded-full p-2 mb-1"/>  
                 <p class="text-xs font-thin text-center w-full">Journal</p>                
             </a>
