--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Title -->
         <div class="flex w-90 justify-between items-center p-5">
             <h1 class="text-2xl font-bold text-gray-800">Hello User!</h1>
-            <img src="img/icon_setting.svg" alt="Settings" class="w-8 h-8 filter bg-[#7D8C9A] rounded-full p-1"/>
+            <img src="img/icon_setting.svg" alt="Settings" class="w-8 h-8 filter bg-[#7D8C9A] rounded-full p-1 hover:bg-[#6A7885] transition-colors duration-200"/>
         </div>
         <!-- Tasks for today -->
         <div class="bg-[#D9D9D9] rounded-2xl p-5 mb-6 w-90 sm:w-auto shadow-xl">
