Made entry a hyperlink to go to entry page

--- a/journal.html
+++ b/journal.html
@@ -12,10 +12,10 @@
     
     <!-- Entries -->
     <div class="w-90 grid grid-cols-2 gap-4 p-4">
-        <div class="bg-[#EBEFF0] rounded-2xl p-4 h-64 flex flex-col items-center justify-center w-full shadow-xl">
+        <a href="entry.html" class="bg-[#EBEFF0] rounded-2xl p-4 h-64 flex flex-col items-center justify-center w-full shadow-xl">
             <span class="text-[#98AABA] text-5xl font-thin">+</span>
             <p class="text-[#98AABA] text-2xl font-thin">New Entry</p>   
-        </div>
+        </a>
         
         <div class="bg-[#D2F0FF] rounded-2xl p-4 h-64 flex flex-col w-full relative shadow-xl">
             <img src="img/edit.svg" alt="Edit" class=" absolute top-2 right-2 rounded-full bg-[#EAEEF1]  p-1 w-6 h-6 hover:bg-[#D6DDE3] cursor-pointer"/>
