--- a/entry.html
+++ b/entry.html
@@ -6,7 +6,7 @@
     <title>Entry</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="flex items-center flex-col">
+<body class="h-[755px] flex items-center flex-col justify-center relative">
     
     <!-- Header -->
     <header class="w-90 flex items-center justify-center relative">
@@ -18,9 +18,7 @@
     </header>
 
     <!-- Main -->
-    <div>
-        <textarea class="w-90 h-96 p-4 text-sm font-thin resize-none focus:outline-none focus:ring-2 focus:ring-blue-300" placeholder="Start Typing here..."></textarea>
-    </div>
+    <textarea class="w-90 h-130 p-4 text-sm font-thin resize-none focus:outline-none" placeholder="Start Typing here..."></textarea>
     
     <!-- Footer -->
     <footer class="bg-[#EAEEF1] w-90 flex justify-between items-center" >
