--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg cursor-pointer transition-colors duration-200">
                 <img src="img/today.svg" alt="Calender" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
-                <p class="text-xs font-thin text-center w-full">Calender</p>                  
+                <p class="text-xs font-thin text-center w-full">Calendar</p>                  
             </div>
             <a href="journal.html" class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg transition-colors duration-200">
                 <img src="img/edit.svg" alt="Journal" class="w-10 h-8 filter rounded-full p-2 mb-1"/>  
