--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <p class="text-xs font-thin text-center w-full">To-Do</p>               
             </div>
             <div class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg cursor-pointer transition-colors duration-200">
-                <img src="img/today.svg" alt="Calender" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
+                <img src="img/today.svg" alt="Calendar" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
                 <p class="text-xs font-thin text-center w-full">Calendar</p>                  
             </div>
             <a href="journal.html" class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg transition-colors duration-200">
