--- a/index.html
+++ b/index.html
@@ -1,66 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Application Mockup</title>
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    </head>
-    <body class="flex items-center flex-col">
-        <div class="w-[375px] h-[667px] flex flex-col justify-between">
-            <!-- Title -->
-            <div class="flex w-90 justify-between items-center p-5">
-                <h1 class="text-2xl font-bold text-gray-800">Hello User!</h1>
-                <img src="img/icon_setting.svg" alt="Settings" class="w-8 h-8 filter bg-[#7D8C9A] rounded-full p-1 hover:bg-[#6A7885] transition-colors duration-200"/>
-            </div>
-            <!-- Tasks for today -->
-            <div class="bg-[#D9D9D9] rounded-2xl p-5 mb-6 w-90 sm:w-auto shadow-xl">
-                <div class="mb-3 border-b border-gray-400 pb-1">
-                    <h2 class="text-2xl font-bold text-gray-800">Thursday</h2>
-                    <p class="text-sm italic font-thin pb-1">March 10</p>
-                </div>
-                <form class="space-y-2 flex flex-col items-center">
-                    <div class="flex items-center p-3 rounded-lg">
-                        <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600 "/>
-                        <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Cook Food</label>
-                    </div>
-                    <div class="flex items-center p-3 rounded-lg">
-                        <input type="checkbox" class="h-5 w-5 rounded"/>
-                        <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Bathe</label>
-                    </div>
-                    <div class="flex items-center p-3 rounded-lg mb-10">
-                        <input type="checkbox" class="h-5 w-5 rounded"/>
-                        <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Assignment 1</label>
-                    </div>
-                    <button class=" bg-[#7D8C9A] rounded-2xl  pt-2 pb-2 w-80 text-white font-thin hover:bg-[#6A7885] transition-colors duration-200">+ Add to-do</button>
-                </form>
-            </div>
-            <!-- Overdue tasks -->
-            <div class="bg-[#FFE2E2] rounded-2xl p-5 mb-6 w-90 sm:w-auto shadow-xl ">
-                <h2 class="text-2xl font-bold text-gray-800 mb-3 border-b border-gray-400 pb-2">Overdue</h2>
-                <div>
-                    <div class="flex items-center p-3 rounded-lg">
-                        <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600 "/>
-                        <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Eat Breakfast</label>
-                    </div>
-                </div>
-            </div>
-            <!-- Footer -->
-            <footer class="bg-[#EAEEF1] w-90 flex justify-between items-center" >
-                <div class="flex flex-col items-center flex-1 mt-2 mb-2">
-                    <img src="img/check-box.svg" alt="Tasks" class="w-10 h-8 filter bg-[#D6DDE3] rounded-full p-2 mb-1"/> 
-                    <p class="text-xs font-thin text-center w-full">To-Do</p>               
-                </div>
-                <div class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg cursor-pointer transition-colors duration-200">
-                    <img src="img/today.svg" alt="Calender" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
-                    <p class="text-xs font-thin text-center w-full">Calender</p>                  
-                </div>
-                <a href="journal.html" class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg transition-colors duration-200">
-                    <img src="img/edit.svg" alt="Journal" class="w-10 h-8 filter rounded-full p-2 mb-1"/>  
-                    <p class="text-xs font-thin text-center w-full">Journal</p>                
-                </a>
-            </footer>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Application Mockup</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <style>
+      /* support your custom widths used below */
+      .w-90{width:90%} .w-80{width:80%} .w-70{width:70%}
+    </style>
+  </head>
+  <body class="flex items-center flex-col">
+    <div class="w-[375px] h-[667px] flex flex-col justify-between">
+      <!-- Title -->
+      <div class="flex w-90 justify-between items-center p-5">
+        <h1 class="text-2xl font-bold text-gray-800">Hello User!</h1>
+        <img src="img/icon_setting.svg" alt="Settings"
+             class="w-8 h-8 filter bg-[#7D8C9A] rounded-full p-1 hover:bg-[#6A7885] transition-colors duration-200"/>
+      </div>
+
+      <!-- Tasks for today -->
+      <div class="bg-[#D9D9D9] rounded-2xl p-5 mb-6 w-90 sm:w-auto shadow-xl">
+        <div class="mb-3 border-b border-gray-400 pb-1">
+          <h2 class="text-2xl font-bold text-gray-800">Thursday</h2>
+          <p class="text-sm italic font-thin pb-1">March 10</p>
         </div>
-        
-    </body>
+        <form class="space-y-2 flex flex-col items-center">
+          <div class="flex items-center p-3 rounded-lg">
+            <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600 "/>
+            <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Cook Food</label>
+          </div>
+          <div class="flex items-center p-3 rounded-lg">
+            <input type="checkbox" class="h-5 w-5 rounded"/>
+            <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Bathe</label>
+          </div>
+          <div class="flex items-center p-3 rounded-lg mb-10">
+            <input type="checkbox" class="h-5 w-5 rounded"/>
+            <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Assignment 1</label>
+          </div>
+          <button class="bg-[#7D8C9A] rounded-2xl pt-2 pb-2 w-80 text-white font-thin hover:bg-[#6A7885] transition-colors duration-200">
+            + Add to-do
+          </button>
+        </form>
+      </div>
+
+      <!-- Overdue tasks -->
+      <div class="bg-[#FFE2E2] rounded-2xl p-5 mb-6 w-90 sm:w-auto shadow-xl ">
+        <h2 class="text-2xl font-bold text-gray-800 mb-3 border-b border-gray-400 pb-2">Overdue</h2>
+        <div>
+          <div class="flex items-center p-3 rounded-lg">
+            <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600 "/>
+            <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Eat Breakfast</label>
+          </div>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <footer class="bg-[#EAEEF1] w-90 flex justify-between items-center">
+        <div class="flex flex-col items-center flex-1 mt-2 mb-2">
+          <img src="img/check-box.svg" alt="Tasks" class="w-10 h-8 filter bg-[#D6DDE3] rounded-full p-2 mb-1"/> 
+          <p class="text-xs font-thin text-center w-full">To-Do</p>               
+        </div>
+        <div class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg cursor-pointer transition-colors duration-200">
+          <img src="img/today.svg" alt="Calender" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
+          <p class="text-xs font-thin text-center w-full">Calender</p>                  
+        </div>
+        <a href="journal.html" class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg transition-colors duration-200">
+          <img src="img/edit.svg" alt="Journal" class="w-10 h-8 filter rounded-full p-2 mb-1"/>  
+          <p class="text-xs font-thin text-center w-full">Journal</p>                
+        </a>
+      </footer>
+    </div>
+  </body>
 </html>
