Add checkbox for cooking food in the form

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
           <p class="text-sm italic font-thin pb-1">March 10</p>
         </div>
         <form class="space-y-2 flex flex-col items-center">
-          <div class="flex items-center p-3 rounded-lg">
-            <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600 "/>
-            <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Cook Food</label>
-          </div>
+          <label class="flex items-center gap-3 p-3">
+            <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600"/>
+            <span class="inline-flex items-center border border-gray-400 rounded-lg px-3 py-2 text-gray-800 font-thin">
+            Cook Food
+            </span>
+          </label>
           <div class="flex items-center p-3 rounded-lg">
             <input type="checkbox" class="h-5 w-5 rounded"/>
             <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Bathe</label>
