--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
           <p class="text-sm italic font-thin pb-1">March 10</p>
         </div>
         
-        <form class="space-y-2 flex flex-col items-start">
+        <form class="space-y-3 flex flex-col items-start">
           <div class="flex items-center gap-3 p-2">
             <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600" />
-            <label class="border border-gray-400 rounded-md px-3 py-2 font-thin text-gray-800">
+            <label class="border border-gray-400 rounded-md px-3 py-2 font-thin text-gray-800 w-[260px]">
             Cook Food
             </label>
           </div>
 
           <div class="flex items-center gap-3 p-2">
             <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600" />
-            <label class="border border-gray-400 rounded-md px-3 py-2 font-thin text-gray-800">
+            <label class="border border-gray-400 rounded-md px-3 py-2 font-thin text-gray-800 w-[260px]">
             Bathe
             </label>
           </div>
 
           <div class="flex items-center gap-3 p-2 mb-6">
             <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600" />
-            <label class="border border-gray-400 rounded-md px-3 py-2 font-thin text-gray-800">
+            <label class="border border-gray-400 rounded-md px-3 py-2 font-thin text-gray-800 w-[260px]">
             Assignment 1
             </label>
           </div>
@@ -59,9 +59,11 @@
       <div class="bg-[#FFE2E2] rounded-2xl p-5 mb-6 w-90 sm:w-auto shadow-xl ">
         <h2 class="text-2xl font-bold text-gray-800 mb-3 border-b border-gray-400 pb-2">Overdue</h2>
         <div>
-          <div class="flex items-center p-3 rounded-lg">
-            <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600 "/>
-            <label class="border border-gray-400 rounded-r-full ml-3 pb-2 pl-2 pt-2 w-70 font-thin text-gray-800">Eat Breakfast</label>
+          <div class="flex items-center gap-3 p-2">
+            <input type="checkbox" class="h-5 w-5 rounded focus:ring-gray-600" />
+            <label class="border border-gray-400 rounded-md px-3 py-2 font-thin text-gray-800 w-[260px]">
+            Eat Breakfast
+            </label>
           </div>
         </div>
       </div>
