--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
             </label>
           </div>
 
-          <button
-            class="bg-[#7D8C9A] rounded-2xl py-2 px-6 w-80 text-white font-thin hover:bg-[#6A7885] transition-colors duration-200">
-            + Add to-do
-          </button>
+          <div class="w-full flex justify-center">
+            <button
+              class="bg-[#7D8C9A] rounded-2xl py-2 px-6 w-80 text-white font-thin hover:bg-[#6A7885] transition-colors duration-200">
+              + Add to-do
+            </button>
+          </div>
         </form>
       </div>
 
