--- a/journal.html
+++ b/journal.html
@@ -5,20 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Journal</title>
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <!-- helpers for your custom widths -->
   <style>
     .w-90{width:90%} .w-80{width:80%} .w-70{width:70%}
   </style>
 </head>
 <body class="flex items-center flex-col">
-  <div class="w-[375px] flex flex-col justify-between">
+  <div class="w-[375px] h-[667px] flex flex-col justify-between">
     <!-- Header -->
     <header class="w-90 p-5">
       <h1 class="text-2xl font-bold text-gray-800">Entries</h1>
     </header>
 
     <!-- Body -->
-    <main class="w-90 p-4">
+    <main class="w-90 p-4 flex-1">
       <div class="grid grid-cols-2 gap-4">
         <!-- New Entry card -->
         <a href="entry.html" class="bg-[#EBEFF0] rounded-2xl p-4 h-64 flex flex-col items-center justify-center w-full shadow-xl">
