--- a/entry.html
+++ b/entry.html
@@ -23,7 +23,7 @@
     <!-- Body -->
     <main class="w-90 flex-1">
       <textarea class="w-full min-h-[300px] p-4 text-sm font-thin resize-none focus:outline-none"
-                placeholder="Start Typing here..."></textarea>
+                placeholder="Start typing here..."></textarea>
     </main>
 
     <!-- Footer -->
@@ -33,7 +33,7 @@
         <p class="text-xs font-thin text-center w-full">To-Do</p>
       </a>
       <div class="flex flex-col items-center flex-1 mt-2 mb-2 hover:bg-[#D6DDE3] rounded-lg cursor-pointer transition-colors duration-200">
-        <img src="img/today.svg" alt="Calender" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
+        <img src="img/today.svg" alt="Calendar" class="w-10 h-8 filter rounded-full p-2 mb-1"/>
         <p class="text-xs font-thin text-center w-full">Calendar</p>
       </div>
       <div class="flex flex-col items-center flex-1 mt-2 mb-2">
